Creating the R package for CancersubtypesPrognosis

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(CancerPrognosis_LncRNAData)
 export(CancerPrognosis_RNAData)
 export(CancerPrognosis_miRNAData)
+export(CancerSubtypes)
 export(Cindex)
 export(DiffExp.limma)
 export(ExecuteCC)
@@ -20,6 +21,7 @@ export(FSbyCox)
 export(FSbyMAD)
 export(FSbyPCA)
 export(FSbyVar)
+export(LogRank)
 export(RNAmodel)
 export(data.checkDistribution)
 export(data.imputation)
@@ -35,9 +37,18 @@ export(silhouette_SimilarityMatrix)
 export(spectralAlg)
 export(survAnalysis)
 import(Biobase)
+import(CIMLR)
+import(ConsensusClusterPlus)
+import(NMF)
+import(PINSPlus)
+import(SNFtool)
+import(doParallel)
+import(foreach)
 import(genefu)
+import(iCluster)
 import(stringr)
 import(survcomp)
+import(survival)
 importFrom(CIMLR,CIMLR)
 importFrom(ConsensusClusterPlus,ConsensusClusterPlus)
 importFrom(NMF,aheatmap)
@@ -62,6 +73,7 @@ importFrom(grDevices,png)
 importFrom(grDevices,postscript)
 importFrom(grDevices,rainbow)
 importFrom(grDevices,rgb)
+importFrom(iC10,matchFeatures)
 importFrom(iCluster,iCluster2)
 importFrom(iCluster,plotiCluster)
 importFrom(impute,impute.knn)
