--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,6 +17,7 @@ export(ExecuteSNF)
 export(ExecuteSNF.CC)
 export(ExecuteWSNF)
 export(ExecuteiCluster)
+export(ExecuteintNMF)
 export(FSbyCox)
 export(FSbyMAD)
 export(FSbyPCA)
@@ -51,6 +52,7 @@ import(survcomp)
 import(survival)
 importFrom(CIMLR,CIMLR)
 importFrom(ConsensusClusterPlus,ConsensusClusterPlus)
+importFrom(IntNMF,nmf.mnnals)
 importFrom(NMF,aheatmap)
 importFrom(NMF,consensusmap)
 importFrom(NMF,nmf)
