--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,14 +1,14 @@
 Package: CancerSubtypesPrognosis
 Type: Package
 Title: Cancer subtypes and prognosis based on multiple genomic data sets
-Version: 1.0.2
+Version: 1.1.0
 Date: 2021-02-19
 Author: Xiaomei Li<xiaomei.li@mymail.unisa.edu.au> 
         Taosheng Xu<taosheng.x@gmail.com>
         Thuc Le<Thuc.Le@unisa.edu.au>
 Maintainer: Xiaomei Li<xiaomei.li@mymail.unisa.edu.au> 
-Depends: R (>= 3.6), sigclust, NMF, Biobase, stringr, genefu 
-Imports: SNFtool, iCluster, cluster, impute, limma, CIMLR,
+Depends: R (>= 3.6), sigclust, NMF, Biobase, stringr, genefu, scales 
+Imports: SNFtool, iCluster, cluster, impute, limma, CIMLR,IntNMF,
         ConsensusClusterPlus, grDevices, survival, PINSPlus, breastCancerMAINZ, survcomp, iC10, doParallel, foreach
 Encoding: UTF-8
 LazyData: TRUE
